# libsodium

./: CInstallLists.txt  CMakeLists.txt  azure-pipelines.yml
modules/: CPM.cmake
test/: CPU_UNALIGNED_ACCESS.c  HAVE_AMD64_ASM.c  HAVE_ATOMIC_OPS.c  HAVE_AVX2INTRIN.c  HAVE_AVX2INTRIN_MM256.c  HAVE_AVX512FINTRIN.c  HAVE_AVXINTRIN.c  HAVE_AVX_ASM.c  HAVE_CPUID.c  HAVE_EMMINTRIN.c  HAVE_GET_ENTROPY.c  HAVE_HIDDEN.c  HAVE_INLINE_ASM.c  HAVE_MMINTRIN.c  HAVE_PMMINTRIN.c  HAVE_PRIVATE_EXTERN.c  HAVE_RDRAND.c  HAVE_SMMINTRIN.c  HAVE_SYS_RANDOM.c  HAVE_TI_MODE.c  HAVE_TMMINTRIN.c  HAVE_WEAK_SYMBOLS.c  HAVE_WMMINTRIN.c  HAVE_XGETBV.c  HAVE__XGETBV.c  IS_STDC_LIMIT_MACROS_NEEDED.c
